--- a/lesson-16/index.html
+++ b/lesson-16/index.html
@@ -93,7 +93,7 @@
                         </label>
                         <input class="form-practice__input" id="full-years"
                            placeholder="Full  years" type="number"
-                           name="full-years" maxlength="3">
+                           name="full-years">
                      </div>
                      <div class="form-practice__line">
                         <label class="form-practice__label" for="birth">
@@ -102,7 +102,7 @@
                         <input
                            class="form-practice__input form-practice__input--calendar"
                            type="date" id="birth" name="birth" min="1950-01-01"
-                           max="2007-12-31" autocomplete="off" required />
+                           max="2007-12-31" autocomplete="off" required>
                      </div>
                   </fieldset>
                   <fieldset class="form-practice__groupe ">
@@ -185,8 +185,8 @@
                         </label>
                         <select class="form-practice__select" name="type"
                            id="type">
-                           <option class="form-practice__option" value="sedan"
-                              checkbox>Sedan</option>
+                           <option class="form-practice__option" value="sedan">
+                              Sedan</option>
                            <option class="form-practice__option"
                               value="hatchback">Hatchback</option>
                            <option class="form-practice__option" value="pickup">
@@ -225,25 +225,25 @@
                         </label>
                         <input class="form-practice__input" id="file"
                            type="file" name="file"
-                           type="image/webp, image/jpeg, image/png">
+                           accept="image/webp, image/jpeg, image/png">
                      </div>
                      <div class="form-practice__line">
-                        <label class="form-practice__label" for="avatar">
-                           Range
+                        <label class="form-practice__label" for="progress">
+                           Progress
                         </label>
-                        <input class="form-practice__input" id="avatar"
-                           type="range" name="avatar">
+                        <input class="form-practice__input" id="progress"
+                           type="range" name="progress" min="0" max="10"
+                           value="5" step="1">
                      </div>
                   </fieldset>
 
-                  <!-- =================Password, hidden=========================== -->
-
+                  <!-- ================= hidden=========================== -->
                   <div class="form-practice__line">
                      <p class="form-practice__text">
                         A hidden input that cannot be filled in by the user, but
                         contains some data
                      </p>
-                     <input class="form__input" type="hidden" name="os" required
+                     <input class="form-practice__input" type="hidden" name="os"
                         value="windows">
                   </div>
                   <!-- ==================================================== -->
@@ -263,7 +263,7 @@
       </main>
       <footer class="footer">
          <div class="footer__container">
-            <ul class="header__nav nav">
+            <ul class="footer__nav nav">
                <li class="nav__item">
                   <a class="nav__link" href="#practice">Practice</a>
                </li>
